# event_emitter_rs

./: Cargo.toml
src/: lib.rs  tests.rs
