[package]
name = "event-emitter-rs"
version = "0.1.4"
authors = ["Dylan-Kerler <dylankerler@gmail.com>"]
repository = "https://github.com/Dylan-Kerler/event_emitter_rs"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["event-emitter", "emitter", "EventEmitter", "event"]
description = "Lightweight EventEmitter"
readme = "./README.md"

[dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
bincode = "1.3.3"
serde = { version = "1.0.132", features = ["derive"] }
lazy_static = "1.4.0"

[target.wasm32-unknown-unknown.dependencies]
uuid = { features = ["wasm-bindgen"], version = "0.8.2" }


